pechakucha/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

body{
	font-family: 'Source Sans Pro', sans-serif;
	overflow-x: hidden;
}
#main-header{
	background: #34a5dd;
	box-sizing: border-box;
	color: #fff;
	padding: 1.25em;
}
#main-header a{
	color: #fff;
	text-decoration: none;
}
.svg-icon{
	display: inline-block;
}
.svg-icon img{
	width: 3.75em;
	height: 3.75em;
}
#main-header h1{
	display: inline-block;
	font-size: 1.2em;
	font-weight: 600;
	text-transform: uppercase;
	position: relative;
	top: -1.2em;
	left: 0.625em;
}
.preamble{
	box-sizing: border-box;
	color: #404040;
	font-size: 1.125em;
	font-weight: 300;
	line-height: 1.3em;
	padding: 1.25em;
}
#js-talks ul li{
	background: #f6f5f5;
	box-sizing: border-box;
	margin: 0 0 0.5em 0;
	padding: 1.25em;
}
#js-talks ul li h2{
	font-weight: 600;
}
.filter-btn:before,
#js-talks ul li h2:before{
	-moz-border-radius: 100%;
	-webkit-border-radius: 100%;
	border-radius: 100%;
	content: '';
	display: inline-block;
	margin: 0 0.5em 0 0;
	height: 0.75em;
	width: 0.75em;
}
.filter-btn:before{
	position: relative;
	top: -4px;
	height: 0.4em;
	width: 0.4em;
	margin: 0 0.3em 0 0;
}
.filter-btn.blue:before,
h2.blue:before{
	background: #4690cd;
}
.filter-btn.red:before,
h2.red:before{
	background: #ed1c24;
}
.filter-btn.green:before,
h2.green:before{
	background: #00a651;
}
.filter-btn.yellow:before,
h2.yellow:before{
	background: #f9cf1b;
}
/* undetermined colors */
.filter-btn.brown:before,
h2.brown:before{
	background: #663300;
}
.filter-btn.purple:before,
h2.purple:before{
	background: purple;
}
.filter-btn.orange:before,
h2.orange:before{
	background: orange;
}

.talkDetails{
	font-weight: 300;
	line-height: 1.3em;
	margin: 0.2em 0 0 1.25em;
}
.location{
	text-transform: uppercase;
	font-weight: 400;
}
#js-filter-trigger{
	float: right;
	margin-top: 0.8em;
}
#hide-filter{
	display: block;
	float: right;
	font-size: 3em;
	padding-top: 0.4em;
	padding-right: 0.4em;
}
#hide-filter:hover{
	cursor: pointer;
}
.filter-content{
	box-sizing: border-box;
	height: 100%;
	float: left;
	padding: 1.25em;
	width: 100%;
}
#filter {
	text-align: center;
	background: #fff;
    position: fixed;
    z-index: 20;
    overflow-x: hidden;
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -ms-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition: all 0.3s;
}

#filter.slide-menu-right {
    top: 0;
    width: 100%;
    height: 100%;
}
#filter.slide-menu-right {
    right: -100%;
}
body.filter-active #filter.slide-menu-right {
    right: 0
}
.filter-content ul li{
	text-align: right;
}
.filter-btn{
	color: #000;
	display: inline-block;
	font-size: 2em;
	text-decoration: none;
	padding: 0.3em 0;
}
.timeslotHeading{
	font-size: 1.4em;
	padding: 1em 1.25em 1.25em 1.25em;
}

